--- a/EbinFight/EbinFight.vcxproj
+++ b/EbinFight/EbinFight.vcxproj
@@ -144,23 +144,27 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp" />
+    <ClCompile Include="Component.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Globals.cpp" />
     <ClCompile Include="Handle_Controls.cpp" />
+    <ClCompile Include="HitBoxComponent.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Object_Manager.cpp" />
+    <ClCompile Include="Handle_Object.cpp" />
     <ClCompile Include="State.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Client.h" />
+    <ClInclude Include="Component.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="Handle_Controls.h" />
-    <ClInclude Include="Object_Manager.h" />
+    <ClInclude Include="Handle_Object.h" />
+    <ClInclude Include="HitBoxComponent.h" />
     <ClInclude Include="State.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
