--- a/EbinFight/EbinFight.vcxproj.filters
+++ b/EbinFight/EbinFight.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="Game">
       <UniqueIdentifier>{7bbe9660-1668-4a61-99e9-ba80c91bc5e3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game\Components">
+      <UniqueIdentifier>{1c774314-6495-4328-85fa-5e9708ff07e2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="State.cpp">
@@ -54,8 +57,14 @@
     <ClCompile Include="GameObject.cpp">
       <Filter>Game</Filter>
     </ClCompile>
-    <ClCompile Include="Object_Manager.cpp">
+    <ClCompile Include="Handle_Object.cpp">
       <Filter>Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Component.cpp">
+      <Filter>Game\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="HitBoxComponent.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -77,11 +86,17 @@
     <ClInclude Include="Engine.h">
       <Filter>Engine</Filter>
     </ClInclude>
-    <ClInclude Include="Object_Manager.h">
+    <ClInclude Include="Handle_Object.h">
       <Filter>Game</Filter>
     </ClInclude>
     <ClInclude Include="GameObject.h">
       <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>Game\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="HitBoxComponent.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
